export const snapshot = {};

snapshot[`Issue View Command - Help Text 1`] = `
stdout:
"
\\x1b[1mUsage:\\x1b[22m \\x1b[95mview \\x1b[33m[\\x1b[95m\\x1b[95missueId\\x1b[95m\\x1b[33m]\\x1b[95m\\x1b[39m

\\x1b[1mDescription:\\x1b[22m

  View issue details (default) or open in browser/app

\\x1b[1mOptions:\\x1b[22m

  \\x1b[94m-h\\x1b[39m, \\x1b[94m--help\\x1b[39m  \\x1b[31m\\x1b[1m-\\x1b[22m\\x1b[39m Show this help.      
  \\x1b[94m-w\\x1b[39m, \\x1b[94m--web\\x1b[39m   \\x1b[31m\\x1b[1m-\\x1b[22m\\x1b[39m Open in web browser  
  \\x1b[94m-a\\x1b[39m, \\x1b[94m--app\\x1b[39m   \\x1b[31m\\x1b[1m-\\x1b[22m\\x1b[39m Open in Linear.app   

"
stderr:
""
`;

snapshot[`Issue View Command - With Issue ID 1`] = `
stdout:
"Error: error sending request for url (http://localhost:3000/graphql): client error (Connect): tcp connect error: Connection refused (os error 61): Connection refused (os error 61)
"
stderr:
"✗ Failed to fetch issue details
"
`;

snapshot[`Issue View Command - With Mock Server Terminal 1`] = `
stdout:
"# Fix authentication bug in login flow

Users are experiencing issues logging in when their session expires. This affects the main authentication flow and needs to be resolved quickly.

## Steps to reproduce
1. Log in to the application
2. Wait for session to expire
3. Try to perform an authenticated action
4. Observe the error

## Expected behavior
User should be redirected to login page with clear messaging.

## Actual behavior
User sees cryptic error message and gets stuck.
"
stderr:
""
`;

snapshot[`Issue View Command - Issue Not Found 1`] = `
stdout:
'Error: Issue not found: TEST-999: {"response":{"errors":[{"message":"Issue not found: TEST-999","extensions":{"code":"NOT_FOUND"}}],"status":200,"headers":{}},"request":{"query":"query GetIssueDetails(\$id: String!) {\\\\n  issue(id: \$id) {\\\\n    title\\\\n    description\\\\n    url\\\\n    branchName\\\\n  }\\\\n}","variables":{"id":"TEST-999"}}}
'
stderr:
"✗ Failed to fetch issue details
"
`;
